manifests/vault/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    istio-injection: disabled
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
