manifests/vault/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/proxy-read-timeout: "300"
    konghq.com/proxy-send-timeout: "300"
    konghq.com/proxy-connect-timeout: "60"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - vault.home.lab
      secretName: homelab-wildcard-tls
  rules:
    - host: vault.home.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
